--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Working WOOD</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript">
+      alert('test')
+    </script>
   </head>
   <body>
     <div class="wrapper">
