menu pics, logo pixel perfect

--- a/index.html
+++ b/index.html
@@ -8,69 +8,72 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <div class="video"></div>
-        <div class="logo--wrapper">
-          <div class="logo">
-            <a href="#" class="logo--link">
-              <h2>WORKING</p>
-              <h1>WOOD</p>
-            </a>
-          </div>
-          <button type="button" name="button" class="small--button">with Paul Sellers</button>
-          <p class="preambula">
-            Mastercraftsman Paul Sellers shares fundamental concepts, techniques and skills of hand tool wood craft for enthusiasts of any skill level.
-          </p>
-          <button type="button" name="button" class="big--button">Order Now</button>
-        </div>
-        <ul class="menu">
-          <li class="menu--item"><a href="#" class="menu--link"></a></li>
-          <li class="menu--item"><a href="#" class="menu--link"></a></li>
-          <li class="menu--item"><a href="#" class="menu--link"></a></li>
-        </ul>
-        <p class="more--text">Learn the <a href="#" class="more--link">secrets</a> of woodworking techniques</p>
-        <p class="opinion">What the people say? <a href="#" class="opinion--link">Read Testimonials</a></p>
-        <div class="header--devider"></div>
-      </header>
-      <div class="small--wrapper">
-        <nav>
-          <h3>Click on the DVD to Learn about the series</h3>
-          <ul class="dvd">
-            <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-            <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-            <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-            <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-            <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-            <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-            <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-          </ul>
-          <div class="story--wrapper">
-            <div class="dvd--story">
-              <h4>MASTER Dovertails</h4>
-              <p class="story--text">Building on the essential concepts of Working Wood Series 1. Paul Sellers teaches you to master perfect dovetails as you make the Shaker-inspired candle box. Pail passes on the traditions of effective hand tool woodworking using accuracy, sharpness and technique.<br>
-              <span class="story--bold">Run time</span> 1 hr 20 min</p>
+        <div class="wrapper--up">
+          <header>
+            <div class="video"></div>
+            <div class="logo--wrapper">
+              <div class="logo">
+                <a href="#" class="logo--link">
+                  <h2>WORKING</p>
+                  <h1>WOOD</p>
+                </a>
+              </div>
+              <button type="button" name="button" class="small--button">with Paul Sellers</button>
+              <p class="preambula">
+                Mastercraftsman Paul Sellers shares fundamental concepts, techniques and skills of hand tool wood craft for enthusiasts of any skill level.
+              </p>
+              <button type="button" name="button" class="big--button">Order Now</button>
             </div>
+            <ul class="menu">
+              <li class="menu--item"><a href="#" class="menu--link"></a></li>
+              <li class="menu--item"><a href="#" class="menu--link"></a></li>
+              <li class="menu--item"><a href="#" class="menu--link"></a></li>
+            </ul>
+            <p class="more--text">Learn the <a href="#" class="more--link">secrets</a> of woodworking techniques</p>
+            <p class="opinion">What the people say? <a href="#" class="opinion--link">Read Testimonials</a></p>
+            <div class="header--devider"></div>
+          </header>
+          <div class="small--wrapper">
+            <nav>
+              <h3>Click on the DVD to Learn about the series</h3>
+              <ul class="dvd">
+                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
+              </ul>
+              <div class="story--wrapper">
+                <div class="dvd--story">
+                  <h4>MASTER Dovertails</h4>
+                  <p class="story--text">Building on the essential concepts of Working Wood Series 1. Paul Sellers teaches you to master perfect dovetails as you make the Shaker-inspired candle box. Pail passes on the traditions of effective hand tool woodworking using accuracy, sharpness and technique.<br>
+                  <span class="story--bold">Run time</span> 1 hr 20 min</p>
+                </div>
+              </div>
+              <div class="nav--divider"></div>
+            </nav>
           </div>
-          <div class="nav--divider"></div>
-        </nav>
-        <main>
-          <section>
-            <p class="main--text">
-              I began work in a small joiner’s workshop in Stockport England. It was here that my life of working wood started. I have been privileged to work with wood every day for 45 years. My work and my designs have gained the approval of President Bush, Senator Gramm and two of my larger pieces now grace the Cabinet Room of the White House as part of the White House Permanent Collection there.<br>
-              I have made canoes, built a cello for my son and had my designs copied by woodworkers who liked my designs and needed to make a living.
-              My world changed when I started apprenticing others to make woodwork, I came across a whole world of woodworkers, who’d never touched a hand tool, carved a rosette, inlaid a panel or even cut a basic dovetail. My love for working wood didn’t belong to me alone, in the evenings I taught children by the dozen for twenty years pretty much week in week out. Out of those babes came the next generation of craftsmen who progressed into apprenticeship, became journeymen and finally ended up as craftsmen in their own workshops.<br>
-              Since then I’ve dedicated my life to educating and training my fellow woodworkers yet still work with wood and making new designs as part of my regular work. Teaching has become second nature for me and I have lost track of the apprentices I trained and the students I’ve worked with through the years. I love to lecture and demonstrate my craftwork whether it’s in Europe, the USA or Canada. This is where I connect with real people working wood.<br>
-              These DVDs and book are an extension of my training and means you can learn wood craft in your own home or garage.
-            </p>
-            <p class="sign">Regards Paul</p>
-      </section>
-      <aside class="">
-        <div class="autor"></div>
-        <p class="autor--text">
-          Teaching has become second nature for me and I have lost track of the apprentices I trained and the students I’ve worked with through the years”
-        </p>
-      </aside>
-    </main>
+          <main>
+            <section>
+              <p class="main--text">
+                I began work in a small joiner’s workshop in Stockport England. It was here that my life of working wood started. I have been privileged to work with wood every day for 45 years. My work and my designs have gained the approval of President Bush, Senator Gramm and two of my larger pieces now grace the Cabinet Room of the White House as part of the White House Permanent Collection there.<br>
+                I have made canoes, built a cello for my son and had my designs copied by woodworkers who liked my designs and needed to make a living.
+                My world changed when I started apprenticing others to make woodwork, I came across a whole world of woodworkers, who’d never touched a hand tool, carved a rosette, inlaid a panel or even cut a basic dovetail. My love for working wood didn’t belong to me alone, in the evenings I taught children by the dozen for twenty years pretty much week in week out. Out of those babes came the next generation of craftsmen who progressed into apprenticeship, became journeymen and finally ended up as craftsmen in their own workshops.<br>
+                Since then I’ve dedicated my life to educating and training my fellow woodworkers yet still work with wood and making new designs as part of my regular work. Teaching has become second nature for me and I have lost track of the apprentices I trained and the students I’ve worked with through the years. I love to lecture and demonstrate my craftwork whether it’s in Europe, the USA or Canada. This is where I connect with real people working wood.<br>
+                These DVDs and book are an extension of my training and means you can learn wood craft in your own home or garage.
+              </p>
+              <p class="sign">Regards Paul</p>
+            </section>
+            <aside class="">
+              <div class="author"></div>
+              <p class="autor--text">
+                Teaching has become second nature for me and I have lost track of the apprentices I trained and the students I’ve worked with through the years”
+              </p>
+            </aside>
+          </main>
+        </div>
     <footer>
       <div class="copyright">
         All rights reserved
