--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         All rights reserved
       </div>
       <ul class="footer--menu">
-        <li class="footer--item"><a href="#" class="footer--link">Home</a></li>
+        <li class="footer--item"><a href="index.html" class="footer--link">Home</a></li>
         <li class="footer--item"><a href="#" class="footer--link">Testimonials</a></li>
         <li class="footer--item"><a href="#" class="footer--link">Terms & Conditions</a></li>
       </ul>
