--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <nav>
               <h3>Click on the DVD to Learn about the series</h3>
               <ul class="dvd">
-                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
-                <li class="dvd--item"><a href="#" class="dvd--link"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link1"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link2"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link3"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link4"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link5"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link6"></a></li>
+                <li class="dvd--item"><a href="#" class="dvd--link7"></a></li>
               </ul>
               <div class="story--wrapper">
                 <div class="dvd--story">
@@ -75,9 +75,10 @@
           </main>
         </div>
     <footer>
-      <div class="copyright">
+      <a href="#" class="brand"></a>
+      <p class="copyright">
         All rights reserved
-      </div>
+      </p>
       <ul class="footer--menu">
         <li class="footer--item"><a href="index.html" class="footer--link">Home</a></li>
         <li class="footer--item"><a href="#" class="footer--link">Testimonials</a></li>
