dvd menu pixel perfect

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-        <div class="wrapper--up">
+        <div class="wrapper--upper">
           <header>
             <div class="video"></div>
             <div class="logo--wrapper">
@@ -33,7 +33,7 @@
             <p class="opinion">What the people say? <a href="#" class="opinion--link">Read Testimonials</a></p>
             <div class="header--devider"></div>
           </header>
-          <div class="small--wrapper">
+          <div class="wrapper--lower">
             <nav>
               <h3>Click on the DVD to Learn about the series</h3>
               <ul class="dvd">
